Bug 48723 - new about dialog does not close with ESC
Summary: new about dialog does not close with ESC
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-15 02:24 UTC by Cor Nouws
Modified: 2012-04-18 03:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-04-15 02:24:27 UTC
Hi *
The beautiful new about dialog does not close with ESC.

IMHO it's a basic bahviour for each dialogue that ESC does close it.

My version is 
 
http://dev-builds.libreoffice.org/daily/Linux-x86_10-Release_Configuration/master/current/master~2012-04-10_16.04.34_LibO-Dev_3.6.0alpha0_Linux_x86_install-deb_en-US.tar.gz
from
 
http://dev-builds.libreoffice.org/daily/Linux-x86_10-Release_Configuration/master/current/

(split of issue for bug 48659)
Comment 1 Andras Timar 2012-04-15 04:58:57 UTC
Maybe you could place a CancelButton there, and hide it. Its keyboard shoutcut (ESC) might work anyway.
Comment 2 Caolán McNamara 2012-04-16 08:36:14 UTC
yeah, I was going to suggest the same thing, and that will also address the "AboutDialog::LinkStubCancelHdl" entry at the top of unusedcode,easy
Comment 3 Not Assigned 2012-04-16 08:48:46 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36245c84bacd30135ba20ad459d9450300c78b00

Resolves: fdo#48723 add a (hidden) CancelButton so ESC closes about dialog