Resolves: fdo#48723 add a (hidden) CancelButton so ESC closes about dialog